--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      vmImage: windows-2019
+      vmImage: windows-latest
     steps:
     - task: NodeTool@0
       inputs:
